add slug support and beautify webapp
