# model/src/node.rs
@@ -5,8 +5,8 @@ use serde::{Deserialize, Serialize};
 pub struct Node {
     /// The unique identifier of the node.
     pub id: i32,
-    /// The node's title.
-    pub title: String,
+    /// The node's unique slug. Unlike the `id`, this can change.
+    pub slug: String,
     /// The actual content of the node.
     pub body: String,
     /// The node's parents.
