# src/api/node.rs
@@ -30,13 +30,13 @@ pub async fn list(
 
     // return list of nodes
     sqlx::query(
-        "SELECT id, title, body FROM node LIMIT $1 OFFSET $2;"
+        "SELECT id, slug, body FROM node LIMIT $1 OFFSET $2;"
     )
         .bind(limit)
         .bind(offset)
         .try_map(|row| Ok(Node {
             id: row.try_get(0)?,
-            title: row.try_get(1)?,
+            slug: row.try_get(1)?,
             body: row.try_get(2)?,
             parents: None,
             children: None,
@@ -52,24 +52,26 @@ pub async fn create(
     params: web::Json<params::CreateNode>,
     db: Db,
 ) -> Result<web::Json<Node>, Error> {
-    let params::CreateNode { title, body } = params.into_inner();
+    let params::CreateNode { slug, body } = params.into_inner();
 
-    if title.len() > 128 {
-        return Err(Error::payload_too_large("member `title` must be less than or equal to 128 characters"));
+    if slug.len() > 128 {
+        return Err(Error::payload_too_large("member `slug` must be less than or equal to 128 characters"));
     }
+
+    crate::api::verify_slug(&slug)?;
 
     // create new node
     let (id,) = sqlx::query_as::<_, (i32,)>(
-        "INSERT INTO node (title, body) VALUES ($1, $2) RETURNING id;"
+        "INSERT INTO node (slug, body) VALUES ($1, $2) RETURNING id;"
     )
-        .bind(&title)
+        .bind(&slug)
         .bind(&body)
         .fetch_one(db.get_ref())
         .await?;
 
     // return node
     Ok(web::Json(Node {
-        id, title, body,
+        id, slug, body,
         parents: None,
         children: None,
     }))
@@ -84,18 +86,18 @@ pub async fn node(
     
     // fetch node
     let node = sqlx::query_as::<_, (String, String)>(
-        "SELECT title, body FROM node WHERE id = $1;"
+        "SELECT slug, body FROM node WHERE id = $1;"
     )
         .bind(id)
         .fetch_optional(db.get_ref())
         .await?;
 
-    if let Some((title, body)) = node {
+    if let Some((slug, body)) = node {
         // get parents and children
         let parents = get_parents(id, &db).await?;
         let children = get_children(id, &db).await?;
 
-        Ok(web::Json(Node { id, title, body, parents: Some(parents), children: Some(children) }))
+        Ok(web::Json(Node { id, slug, body, parents: Some(parents), children: Some(children) }))
     } else {
         Err(Error::not_found("node not found"))
     }
@@ -108,31 +110,33 @@ pub async fn update(
     db: Db,
 ) -> Result<web::Json<Node>, Error> {
     let (id,) = id.into_inner();
-    let params::UpdateNode { title, body } = params.into_inner();
+    let params::UpdateNode { slug, body } = params.into_inner();
 
-    if let Some(title) = &title {
-        if title.len() > 128 {
-            return Err(Error::payload_too_large("member `title` must be less than or equal to 128 characters"));
+    if let Some(slug) = &slug {
+        if slug.len() > 128 {
+            return Err(Error::payload_too_large("member `slug` must be less than or equal to 128 characters"));
         }
+
+        crate::api::verify_slug(&slug)?;
     }
 
     // update node in database
     let node = sqlx::query_as::<_, (String, String)>(
-        "UPDATE node SET title = $2, body = $3 WHERE id = $1 RETURNING title, body"
+        "UPDATE node SET slug = COALESCE($2, slug), body = COALESCE($3, body) WHERE id = $1 RETURNING slug, body"
     )
         .bind(id)
-        .bind(title)
+        .bind(slug)
         .bind(body)
         .fetch_optional(db.get_ref())
         .await?;
 
     // retrieve node
-    if let Some((title, body)) = node {
+    if let Some((slug, body)) = node {
         // get parents and children
         let parents = get_parents(id, &db).await?;
         let children = get_children(id, &db).await?;
 
-        Ok(web::Json(Node { id, title, body, parents: Some(parents), children: Some(children) }))
+        Ok(web::Json(Node { id, slug, body, parents: Some(parents), children: Some(children) }))
     } else {
         Err(Error::not_found("node not found"))
     }
@@ -162,12 +166,12 @@ pub async fn delete(
 
 async fn get_parents(id: i32, db: &Db) -> Result<Vec<Node>, sqlx::Error> {
     sqlx::query(
-        "SELECT node.id, node.title, node.body FROM node INNER JOIN relation ON node.id = relation.parent_id WHERE relation.child_id = $1"
+        "SELECT node.id, node.slug, node.body FROM node INNER JOIN relation ON node.id = relation.parent_id WHERE relation.child_id = $1"
     )
         .bind(id)
         .try_map(|row| Ok(Node {
             id: row.try_get(0)?,
-            title: row.try_get(1)?,
+            slug: row.try_get(1)?,
             body: row.try_get(2)?,
             parents: None,
             children: None,
@@ -178,12 +182,12 @@ async fn get_parents(id: i32, db: &Db) -> Result<Vec<Node>, sqlx::Error> {
 
 async fn get_children(id: i32, db: &Db) -> Result<Vec<Node>, sqlx::Error> {
     sqlx::query(
-        "SELECT node.id, node.title, node.body FROM node INNER JOIN relation ON node.id = relation.child_id WHERE relation.parent_id = $1"
+        "SELECT node.id, node.slug, node.body FROM node INNER JOIN relation ON node.id = relation.child_id WHERE relation.parent_id = $1"
     )
         .bind(id)
         .try_map(|row| Ok(Node {
             id: row.try_get(0)?,
-            title: row.try_get(1)?,
+            slug: row.try_get(1)?,
             body: row.try_get(2)?,
             parents: None,
             children: None,
